# opam-package-template-example

./: .ocamlformat  CHANGES.md  Makefile  README.md  dune-project  example-dev.opam  example-tests.opam  example.opam  index.html  opam-package-template-example-dev.opam  opam-package-template-example-tests.opam  opam-package-template-example.opam
.github/workflows/: ci.yml  deploy-odoc.yml  more-ci.yml
example/: index.html
example/Example/: index.html
example/Example/Hello/: index.html
example/Example__Hello/: index.html
lib/example/src/: dune  example.ml
lib/example/test/: dune
opam-package-template-example/: db.js  index.html
opam-package-template-example-tests/: db.js  index.html
opam-package-template-example-tests/Example_test/: index.html
opam-package-template-example/Example/: index.html
src/: dune  example.mli
test/: dune  test__hello.ml
