opam-version: "2.0"
synopsis: "An example made with opam-package-template"
description: "An example made with opam-package-template"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/opam-package-template-example"
doc: "https://github.com/mbarbin/example"
bug-reports: "https://github.com/mbarbin/opam-package-template-example/issues"
depends: [
  "ocaml" {>= "4.13"}
  "dune" {>= "2.0.0"}
  "base" {>= "v0.15"}
  "core" {>= "v0.15"}
  "ppx_jane" {>= "v0.15" & with-test}
  "ppx_sexp_value" {>= "v0.15"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/opam-package-template-example.git"
